--- a/MultiTask/Base.lproj/Main.storyboard
+++ b/MultiTask/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-129" y="0.0"/>
+            <point key="canvasLocation" x="-252" y="0.0"/>
         </scene>
         <!--Pending-->
         <scene sceneID="e9h-Lc-Xdx">
@@ -68,6 +68,7 @@
                         <searchBar key="tableHeaderView" contentMode="redraw" barStyle="black" placeholder="Search" id="bk8-4j-yDQ">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="barTintColor" red="0.13725490196078433" green="0.13725490196078433" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardAppearance="alert" returnKeyType="search"/>
                             <connections>
@@ -145,6 +146,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Pending Tasks" id="ERk-Xa-VDc">
+                        <barButtonItem key="backBarButtonItem" title=" " id="ffg-eb-AA8"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="aqc-AO-ZlP">
                             <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
@@ -154,7 +156,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="searchBar" destination="bk8-4j-yDQ" id="vPp-U9-VTn"/>
-                        <segue destination="LUP-Gw-wMl" kind="showDetail" identifier="DetailViewController" action="showViewController:sender:" id="Rhp-cl-rNJ"/>
+                        <segue destination="LUP-Gw-wMl" kind="show" identifier="DetailViewController" id="Y8c-3s-hJ4"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lfH-9h-Xhe" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -165,57 +167,70 @@
         <scene sceneID="afx-8P-XJl">
             <objects>
                 <tableViewController storyboardIdentifier="DetailViewController" id="LUP-Gw-wMl" customClass="DetailViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="162" sectionHeaderHeight="28" sectionFooterHeight="28" id="SQa-bW-FIy">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="106" sectionHeaderHeight="28" sectionFooterHeight="28" id="SQa-bW-FIy">
+                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PendingItemCell" rowHeight="162" id="XXQ-yZ-bVr" customClass="PendingItemCell" customModule="MultiTask" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="162"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="106" id="XXQ-yZ-bVr" customClass="ItemCell" customModule="MultiTask" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="106"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XXQ-yZ-bVr" id="Zbo-uz-mLU">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="162"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="106"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="aqj-aj-2kf">
-                                            <rect key="frame" x="16" y="8" width="343" height="146.5"/>
-                                            <subviews>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="right" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Srf-P9-gzG">
-                                                    <rect key="frame" x="0.0" y="0.0" width="286" height="146.5"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
-                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hCx-cJ-owL">
-                                                    <rect key="frame" x="294" y="0.0" width="51" height="31"/>
-                                                    <color key="onTintColor" red="0.44705882349999998" green="0.56078431370000004" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                </switch>
-                                            </subviews>
-                                        </stackView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kVe-qE-eCE">
-                                            <rect key="frame" x="16" y="161.5" width="343" height="0.5"/>
+                                            <rect key="frame" x="16" y="105.5" width="343" height="0.5"/>
                                             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="0.75" id="67B-xT-aBq"/>
                                             </constraints>
                                         </view>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="e7c-L0-UCu">
+                                            <rect key="frame" x="16" y="8" width="343" height="90.5"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="qBN-uN-dir">
+                                                    <rect key="frame" x="0.0" y="0.0" width="294" height="36.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="noteLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BHg-mR-oCP">
+                                                            <rect key="frame" x="0.0" y="0.0" width="76" height="20.5"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRA-xI-mdW">
+                                                            <rect key="frame" x="0.0" y="20.5" width="60" height="16"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hCx-cJ-owL">
+                                                    <rect key="frame" x="294" y="0.0" width="51" height="31"/>
+                                                    <color key="onTintColor" red="0.44705882349999998" green="0.56078431370000004" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <connections>
+                                                        <action selector="toggleCompletion:" destination="XXQ-yZ-bVr" eventType="valueChanged" id="EG5-Q7-1mc"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="aqj-aj-2kf" secondAttribute="trailing" constant="16" id="EGw-Do-ewa"/>
-                                        <constraint firstItem="kVe-qE-eCE" firstAttribute="top" secondItem="aqj-aj-2kf" secondAttribute="bottom" constant="7" id="HNh-XJ-U8g"/>
+                                        <constraint firstAttribute="trailing" secondItem="e7c-L0-UCu" secondAttribute="trailing" constant="16" id="BIH-hE-HJ6"/>
+                                        <constraint firstItem="e7c-L0-UCu" firstAttribute="leading" secondItem="Zbo-uz-mLU" secondAttribute="leading" constant="16" id="I5d-cM-KDO"/>
                                         <constraint firstAttribute="bottom" secondItem="kVe-qE-eCE" secondAttribute="bottom" id="Lb4-NL-htR"/>
-                                        <constraint firstItem="aqj-aj-2kf" firstAttribute="leading" secondItem="Zbo-uz-mLU" secondAttribute="leading" constant="16" id="eBP-o1-FDk"/>
                                         <constraint firstAttribute="trailing" secondItem="kVe-qE-eCE" secondAttribute="trailing" constant="16" id="fer-qj-EVA"/>
+                                        <constraint firstItem="kVe-qE-eCE" firstAttribute="top" secondItem="e7c-L0-UCu" secondAttribute="bottom" constant="7" id="lds-fz-o4O"/>
                                         <constraint firstItem="kVe-qE-eCE" firstAttribute="leading" secondItem="Zbo-uz-mLU" secondAttribute="leading" constant="16" id="lh8-OT-fqi"/>
-                                        <constraint firstItem="aqj-aj-2kf" firstAttribute="top" secondItem="Zbo-uz-mLU" secondAttribute="top" constant="8" id="tJu-d1-r5d"/>
+                                        <constraint firstItem="e7c-L0-UCu" firstAttribute="top" secondItem="Zbo-uz-mLU" secondAttribute="top" constant="8" id="rhm-0q-imn"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" red="0.13725490196078433" green="0.13725490196078433" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="completionSwitch" destination="hCx-cJ-owL" id="PKu-Ye-cmx"/>
-                                    <outlet property="noteTextView" destination="Srf-P9-gzG" id="4Qr-Ar-lVL"/>
+                                    <outlet property="dateLabel" destination="YRA-xI-mdW" id="8Kf-kt-Mhv"/>
+                                    <outlet property="noteLabel" destination="BHg-mR-oCP" id="Gmd-uS-ljS"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -237,7 +252,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MNY-aq-iUD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2654" y="0.0"/>
+            <point key="canvasLocation" x="2780" y="-0.44977511244377816"/>
         </scene>
         <!--Completed-->
         <scene sceneID="oWq-xB-qXY">
@@ -355,10 +370,12 @@
                             <outlet property="delegate" destination="FSb-uF-9bH" id="AXu-fv-3bR"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Completed Tasks" id="hjf-cv-pZK"/>
+                    <navigationItem key="navigationItem" title="Completed Tasks" id="hjf-cv-pZK">
+                        <barButtonItem key="backBarButtonItem" title=" " id="Qp1-VS-sQP"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="segmentedControl" destination="m9S-KQ-7pT" id="TXB-mH-3nh"/>
-                        <segue destination="LUP-Gw-wMl" kind="showDetail" identifier="DetailViewController" action="showViewController:sender:" id="1O3-Vi-6Fl"/>
+                        <segue destination="LUP-Gw-wMl" kind="show" identifier="DetailViewController" id="udG-J9-VrS"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iSY-FZ-5bU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -371,6 +388,6 @@
         <image name="Pending" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Rhp-cl-rNJ"/>
+        <segue reference="udG-J9-VrS"/>
     </inferredMetricsTieBreakers>
 </document>
