added license, modified gitignore

--- a/MultiTask/Base.lproj/Main.storyboard
+++ b/MultiTask/Base.lproj/Main.storyboard
@@ -61,7 +61,7 @@
         <scene sceneID="4dC-nC-s9E">
             <objects>
                 <tableViewController id="I9J-xa-Emk" customClass="PendingMasterViewController" customModule="MultiTask" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="89" sectionHeaderHeight="28" sectionFooterHeight="28" id="Qca-Kb-vIV">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="89" sectionHeaderHeight="28" sectionFooterHeight="28" id="Qca-Kb-vIV">
                         <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
