--- a/MultiTask/Base.lproj/Main.storyboard
+++ b/MultiTask/Base.lproj/Main.storyboard
@@ -70,7 +70,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="barTintColor" red="0.13725490196078433" green="0.13725490196078433" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardAppearance="alert" returnKeyType="search"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" keyboardAppearance="alert" returnKeyType="search"/>
                             <connections>
                                 <outlet property="delegate" destination="I9J-xa-Emk" id="wFU-Gf-W7o"/>
                             </connections>
@@ -208,7 +208,9 @@
                                                 </stackView>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hCx-cJ-owL">
                                                     <rect key="frame" x="294" y="0.0" width="51" height="31"/>
+                                                    <accessibility key="accessibilityConfiguration" identifier="completionSwitch" label="completionSwitch"/>
                                                     <color key="onTintColor" red="0.44705882349999998" green="0.56078431370000004" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="thumbTintColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <connections>
                                                         <action selector="toggleCompletion:" destination="XXQ-yZ-bVr" eventType="valueChanged" id="EG5-Q7-1mc"/>
                                                     </connections>
