added editView xib and class

--- a/MultiTask/Base.lproj/LaunchScreen.storyboard
+++ b/MultiTask/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,28 +22,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MultiTask" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uiI-ye-gS3">
-                                <rect key="frame" x="16" y="311.5" width="343" height="44"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PWW-0x-tiW">
+                                <rect key="frame" x="131" y="277" width="112.5" height="112.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Starfish" translatesAutoresizingMaskIntoConstraints="NO" id="uXb-eV-rW9">
+                                        <rect key="frame" x="8" y="8" width="96.5" height="96.5"/>
+                                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="HJg-e3-ukF"/>
+                                    <constraint firstItem="uXb-eV-rW9" firstAttribute="top" secondItem="PWW-0x-tiW" secondAttribute="top" constant="8" id="16e-HX-F00"/>
+                                    <constraint firstItem="uXb-eV-rW9" firstAttribute="leading" secondItem="PWW-0x-tiW" secondAttribute="leading" constant="8" id="GY9-QT-oJo"/>
+                                    <constraint firstAttribute="trailing" secondItem="uXb-eV-rW9" secondAttribute="trailing" constant="8" id="ZVA-Gc-Gub"/>
+                                    <constraint firstAttribute="bottom" secondItem="uXb-eV-rW9" secondAttribute="bottom" constant="8" id="f4t-IQ-1Yg"/>
+                                    <constraint firstAttribute="width" secondItem="PWW-0x-tiW" secondAttribute="height" multiplier="1:1" id="sn8-hr-PK3"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="uiI-ye-gS3" secondAttribute="trailing" constant="16" id="1dZ-rt-zS2"/>
-                            <constraint firstItem="uiI-ye-gS3" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="2Hr-6r-QcQ"/>
-                            <constraint firstItem="uiI-ye-gS3" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="GBq-Ws-baz"/>
-                            <constraint firstItem="uiI-ye-gS3" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="16" id="f9n-qq-59w"/>
+                            <constraint firstItem="PWW-0x-tiW" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.3:1" id="8Iw-kY-eEn"/>
+                            <constraint firstItem="PWW-0x-tiW" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="d5A-mT-sn9"/>
+                            <constraint firstItem="PWW-0x-tiW" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="h2h-hE-bbR"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Starfish" width="50" height="50"/>
+    </resources>
 </document>
